# topological-navigation-community-arm-ros2

./: .gitignore  Dockerfile  Makefile  README.md  TASKS.md  dev_shell.sh  docker-compose.yml  simulation_entrypoint.sh  start_manual.sh  test_community_arm.sh
Tesis/: Datos.tex  Portada.tex  THESIS_GUIDE.md  configuracion.tex  main.aux  main.bbl  main.bcf  main.blg  main.lof  main.out  main.run.xml  main.tex  main.toc
Tesis/Apuntes/: Notas.md  Referencias.md  Temario_tentativo.md  Temas_Estudiar.md
Tesis/Capítulos/1-Introducción/: Introducción.tex
Tesis/Capítulos/2-Marco-Teórico/: Estado-del-Arte.tex  (+1 more)
Tesis/Imagenes/: arquitectura_ros2.tex  bolas_vs_aabb.tex  carta_local.tex  codo_arriba_abajo.tex  comparativa_l1_l2.tex  construccion_toro.tex  gimbal_lock.tex  mapeo_cspace.tex  pipeline_metodologia.tex
Tesis/Literature/: MarcoTeorico.txt
Tesis/Presentacion/: Estructura_Presentacion.md  main.aux  main.bbl  main.bcf  main.blg  main.nav  main.out  main.run.xml  main.tex  main.tex.orig  main.toc  presentacion_anteproyecto_pt1.pptx
Tesis/Referencias/: referencias.bib
Tesis/Textos/: La industria 4.0 y los cambios en la política industrial.txt
dashboard/: Dockerfile  app.js  index.html
src/robots/community_robot_arm/: CMakeLists.txt  README_PLANNING_ROS2_IMPL.md  package.xml
src/robots/community_robot_arm/doc/: Analisis_Cinematico.md  draw_parallelogram.py
src/robots/community_robot_arm/launch/: display.launch.py
src/robots/community_robot_arm/meshes/: 103.stl  107.stl  1099.stl  1109.stl  111.stl  115.stl  1165.stl  1270.stl  130.stl  1349.stl  142.stl  1429.stl  1498.stl  190.stl  194.stl  216.stl  269.stl  285.stl  28BYJ_48_5V_Stepper_Motor.stl  28byj_48_5v_stepper_motor.stl  295.stl  382.stl  415.stl  51105 Thrust Bearing_1.stl  51105 Thrust Bearing_10.stl  51105 Thrust Bearing_15.stl  51105 Thrust Bearing_16.stl  51105 Thrust Bearing_18.stl  51105 Thrust Bearing_8.stl  515.stl  522.stl  560.stl  575.stl  579.stl  647.stl  692.stl  71.stl  78.stl  89.stl  963.stl  (+137 more)
src/robots/community_robot_arm/rviz/: display.rviz  spherized.rviz
src/robots/community_robot_arm/scripts/: add_collisions.py  create_urdf.py  migrate_from_onshape.sh  parallelogram_kinematics.py
src/robots/community_robot_arm/urdf/: community_robot_arm_full.urdf  community_robot_arm_slim.urdf  community_robot_arm_slim_spherized.urdf  community_robot_arm_slim_spherized_ROS2.urdf  community_robot_arm_slim_spherized_v2.urdf  community_robot_arm_with_collisions.urdf
src/robots/community_robot_arm/urdf/processed/: community_robot_arm_with_collisions.urdf
src/robots/community_robot_arm/urdf/raw/: community_robot_arm_full.urdf  community_robot_arm_slim.urdf
src/robots/community_robot_arm/urdf/spherized/: community_robot_arm_slim_spherized-v2.urdf
src/tools/foam/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.light  LICENSE.txt  README.md  README_DOCKER.md  SPHERIZATION_LOG.md  pyproject.toml  requirements.txt  setup.py
src/tools/foam/cmake/: CompilerSettings.cmake  HelperFunctions.cmake
src/tools/foam/foam/: __init__.py  preprocess.py
src/tools/foam/foam/model/: __init__.py
src/tools/foam/scripts/: generate_sphere_urdf.py  generate_spheres.py  spheres_from_urdf.py  visualize_spheres.py  visualize_urdf.py
src/topological_motion_planners/: package.xml  setup.cfg  setup.py
src/whitebox_motion_planners/: README.md  package.xml  setup.cfg  setup.py
(+175 files in other folders)
